# Evolution-Simulator

./: .bumpversion.cfg  .gitignore  .isort.cfg  Makefile  README.md  VERSION  requirements.txt  setup.cfg
.github/actions/: pr_main.yml
.github/workflows/: build.yml  dependabot.yml  pr_main.yml
src/: main.py
src/evolution-simulator/: json_helper.py  main.py  plotter.py  simulator.py
