[metadata]
name = Evolution Simulator
description = A basic predator-prey simulator.
version = 0.3.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/appcreatorguy/Evolution-Simulator
project_urls = 
    Bug Tracker = https://github.com/appcreatorguy/Evolution-Simulator/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src